# sentinel-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
data/: mitre_attack.json
data/sample_logs/: cloudtrail.json
src/sentinel_mcp/: __init__.py  mitre.py  reporter.py  server.py
src/sentinel_mcp/detectors/: __init__.py  anomaly.py  rules.py
src/sentinel_mcp/parsers/: __init__.py  auth.py  cloudtrail.py  firewall.py  generic.py  syslog.py
tests/: test_detectors.py  test_parsers.py  test_server.py
