[project]
name = "sentinel-mcp"
version = "0.1.0"
description = "AI SOC Analyst - MCP server for autonomous security operations. Turn Claude into an autonomous SOC analyst with log analysis, anomaly detection, MITRE ATT&CK mapping, and incident reporting."
authors = [
    { name = "Zach Abraham", email = "zach@htxautomations.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "security", "soc", "siem", "threat-detection", "anomaly-detection", "mitre-attack", "incident-response", "log-analysis", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
]
dependencies = [
    "mcp>=1.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/zach-abraham/sentinel-mcp"
Repository = "https://github.com/zach-abraham/sentinel-mcp"
Issues = "https://github.com/zach-abraham/sentinel-mcp/issues"

[project.scripts]
sentinel-mcp = "sentinel_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
